examples/test/testpolicy6890.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6890
  namespace: namespace52
spec:
  podSelector:
    matchLabels:
      key31: value28
      key24: value39
      key25: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value18
          key29: value36
          key10: value16
      podSelector:
        matchLabels:
          key27: value27
          key2: value20
